[package]
name = "si-registry-rs"
version = "0.1.0"
edition = "2021"
description = "Local fleet registry client — query repos, capabilities, budgets from Supabase or local cache"
license = "MIT"
repository = "https://github.com/SuperInstance/si-registry-rs"
keywords = ["supabase", "registry", "fleet", "superinstance"]
categories = ["database", "caching"]

[dependencies]
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
